# cmd/api/main.go
@@ -1,20 +1,21 @@
-// @title Fiber Auth API
-// @version 1.0
-// @description Authentication API with Role-based Access Control
-// @termsOfService http://swagger.io/terms/
+// @title           Fiber Ecommerce API
+// @version         1.0
+// @description     API for ecommerce platform
+// @termsOfService 	http://swagger.io/terms/
 
-// @contact.name API Support
-// @contact.url http://www.swagger.io/support
-// @contact.email support@swagger.io
+// @contact.name   API Support
+// @contact.url    http://www.swagger.io/support
+// @contact.email	 support@swagger.io
 
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+// @license.name   Apache 2.0
+// @license.url    http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host localhost:3000
-// @BasePath /
-// @securityDefinitions.apikey ApiKeyAuth
+// @host           localhost:3000
+// @BasePath  /
+// @securityDefinitions.apikey BearerAuth
 // @in header
 // @name Authorization
+// @description     Type "Bearer" followed by a space and JWT token.
 package main
 
 import (
